--- a/marketing/landing-page/index.html
+++ b/marketing/landing-page/index.html
@@ -418,7 +418,7 @@
                             <div class="w-2 h-2 rounded-full bg-[#7c3aed] flex-shrink-0 mt-2 group-hover:scale-150 transition-transform"></div>
                             <div>
                                 <h4 class="font-semibold text-[#1a1a2e] mb-1">Multi-Provider AI Router</h4>
-                                <p class="text-secondary text-sm">Intelligently routes between NVIDIA NIM, Groq, OpenRouter, and Together AI.</p>
+                                <p class="text-secondary text-sm">Intelligently routes between NVIDIA NIM, Groq, and OpenRouter.</p>
                             </div>
                         </div>
                         <div class="flex gap-4 group">
